@@ -37,6 +37,10 @@
 #define ROVIO_IMAGE_DEFAULT_FRAMERATE 25
 #define ROVIO_IMAGE_DEFAULT_AGC_STATE 1
 #define ROVIO_IMAGE_DEFAULT_AWB_STATE 1
+#define ROVIO_IMAGE_DEFAULT_AWB_GAIN_R 128
+#define ROVIO_IMAGE_DEFAULT_AWB_GAIN_G 128
+#define ROVIO_IMAGE_DEFAULT_AWB_GAIN_B 128
+
 #define ROVIO_IMAGE_DEFAULT_AEC_STATE 1
 #define ROVIO_IMAGE_DEFAULT_COMPRESSION 1
 #define ROVIO_IMAGE_DEFAULT_FREQ_COMPENSATION 0
@@ -357,6 +361,13 @@ public:
     // return value: success/failure
 
     bool setAEC(bool state);
+
+    // set Automatic Exposure Control (AWB) gain levels for each RGB channel
+    // R,G,B = gain value for each of (R,G,B) channels (range: 0 -> 255)
+    // reset = true (reset defaults) or false (set Gain as r,g,b values)
+    // return value: success/failure
+
+    bool setAWBGain(unsigned char R, unsigned char G, unsigned char B, bool reset);
 
     // set night mode on camera
     // state = on (true) or off (false)
